<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="item_sentence_starter_label">I was</string>
    <string name="item_sentence_middle_label">for</string>

    <string name="day_feeling_summary_first_part">
        On this day it seems like you felt %1$s the most.&#160; </string>
    <string name="feeling_link_text">&#160;Maybe this link might help?</string>
    <string name="type_spinner_placeholder">What were you feeling?</string>
    <string name="save">Save</string>
    <string name="start_date_label">Start Time</string>
    <string name="duration_label">Duration</string>
    <string name="duration_continue">Cont.</string>
    <string name="duration_10">+10</string>
    <string name="duration_30">+30</string>
    <string name="duration_60">+60</string>
    <string name="ongoing_dialog_accept">Yes, finish previous action</string>
    <string name="ongoing_dialog_cancel">No, cancel</string>
    <string name="ongoing_dialog_body">You already have an ongoing feeling, by adding this new
    feeling, your last feeling would be automatically finished. Do you want to continue?</string>
    <string name="error_start_date_before_ongoing">The starting date cannot be before the
    ongoing feeling starting date</string>


    <string name="delete_label">Delete Item</string>
    <string name="ongoing_label">Ongoing Feeling</string>
    <string name="delete_description">Are you sure you want to delete this item?</string>
    <string name="dialog_delete_btn_yes">Yes, delete</string>
    <string name="dialog_btn_no">No</string>
</resources>