...
        item {
            Spacer(modifier = Modifier.height(dimensionResource(id = MARGIN_LARGE)))
        }
        items(items) { item ->
            ListItem(item,
                modifier = Modifier.padding(horizontal = dimensionResource(id = MARGIN_LARGE))
                    .semantics { testTag = "tag"},
                onClick = { onItemSelected(item.id) },
                onDelete = { onItemDelete(item.id) })
            Divider(
                modifier = modifier
                    .padding(
                        dimensionResource(id = MARGIN_MEDIUM),
...
