...
fun TodayItem(
    currentAction: Action?,
    modifier: Modifier = Modifier,
    onClick: (Long) -> Unit = {}
) {

    Card(modifier = modifier.fillMaxWidth().semantics { contentDescription = "today" },
        onClick = { onClick(currentAction?.dayId?:
    DateUtil.getStartOfDay(System.currentTimeMillis())) }) {
        Column(
            verticalArrangement = Arrangement.spacedBy(dimensionResource(id = com.techspark.core.R.dimen.margin_small)),
            modifier = modifier.padding(8.dp)
        ) {
...
