...
                            CornerSize(0), CornerSize(0)
                        )
                    )
                    .height(height.value)
                    .padding(dimensionResource(id = MARGIN_MEDIUM))
                    .align(Alignment.BottomCenter)
                    .semantics { contentDescription = "add action screen" },
                horizontalAlignment = Alignment.End
            ) {
                Icon(
                    imageVector = Icons.Filled.Close, contentDescription = "",
                    modifier = Modifier
                        .clickable { closeSheet = true }
...
